fix caption on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -392,9 +392,6 @@ main {
 
   }
 
-  .card-title{
-      display: flex;
-  }
   .card-text b{
       display: flex;
   }
